avoid showing invisible text

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Helvetica', 'Helvetica Neue', 'Nimbus Sans', 'Arial', sans-serif;
+    font-display: swap;
     margin: auto;
     max-width: 50em;
 }
